# wepay-rs

./: .env.example  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust-ci.yml
examples/check_balance/: Cargo.toml
examples/check_balance/src/: main.rs
examples/get_product/: Cargo.toml
examples/get_product/src/: main.rs
examples/topup_mobile/: Cargo.toml
examples/topup_mobile/src/: main.rs
src/: error.rs  lib.rs  response.rs  validator.rs
tests/: test_common.rs  test_mockup.rs
